try to fix the position of the message form on mobile

--- a/includes/css/cemp.css
+++ b/includes/css/cemp.css
@@ -261,7 +261,7 @@
     display: none!important;
   }
   .cemp-height-admin{
-    height: calc(100% - 60px)!important;
+    height: 89%!important;
   }
   #cemp-textarea-div{
     margin-bottom: 36px;
